<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_horario"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_horario" />
        <item
            android:id="@+id/nav_normas"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_normas" />
        <item
            android:id="@+id/nav_contacto"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_contacto" />
    </group>

    <item android:title="@string/menu_grupo_SobreLaApp">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_autor"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/action_autor" />
            </group>
        </menu>
    </item>
</menu>
